# junk

./: Makefile.am  README.md  configure.ac  main.cpp  protobuf_xml_adapter.h
